src/main/java/se/isselab/HAnS/featureModel/FeatureModel.bnf
/*
Copyright 2021 Herman Jansson & Johan Martinson

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
{
  parserClass="se.isselab.HAnS.featureModel.parser.FeatureModelParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="FeatureModel"
  psiImplClassSuffix="Impl"
  psiPackage="se.isselab.HAnS.featureModel.psi"
  psiImplPackage="se.isselab.HAnS.featureModel.psi.impl"

  elementTypeHolderClass="se.isselab.HAnS.featureModel.psi.FeatureModelTypes"
  elementTypeClass="se.isselab.HAnS.featureModel.psi.FeatureModelElementType"
  tokenTypeClass="se.isselab.HAnS.featureModel.psi.FeatureModelTokenType"

  psiImplUtilClass="se.isselab.HAnS.featureModel.psi.impl.FeatureModelPsiImplUtil"
}


featureModelFile ::= (feature (feature)?)?
// &begin[Referencing]
COMPONENT ::= feature | LOGIC
LOGIC ::= (OR_BLOCK) | (XOR_BLOCK)
XOR_BLOCK ::= XOR CRLF* (SUB_LOGIC)
OR_BLOCK ::= OR CRLF* (SUB_LOGIC)
SUB_LOGIC ::= INDENT COMPONENT (COMPONENT)+ DEDENT
feature ::= (FEATURENAME (QUESTIONMARK)? (CRLF+ ((INDENT) (COMPONENT)* DEDENT)?)?) {
mixin="se.isselab.HAnS.referencing.impl.FeatureAnnotationNamedElementImpl"
implements="se.isselab.HAnS.referencing.FeatureAnnotationNamedElement"
methods=[getFullLPQText getLPQText getLPQStack renameFeature addFeature deleteFeature getName setName getNameIdentifier getFeatureName getPresentation
addToFeatureModel deleteFromFeatureModel moveFeatureWithChildren deleteFeatureWithAnnotations deleteFeatureWithCode]}
// &end[Referencing]
